Fix 3 columns 1/1.5/1.5 width on mobile and add .mobile-1de2-1de2-1

--- a/src/sass/ultimate-fields/components/columns.sass
+++ b/src/sass/ultimate-fields/components/columns.sass
@@ -58,6 +58,10 @@
         order: var(--m-order)
         justify-content: var(--m-alignment)
 
+    .mobile-1-1de2-1de2,
+    .mobile-1de2-1de2-1
+        grid-template-columns: 1fr 1fr
+
     .mobile-1-1de2-1de2
         &>.column:nth-child(1)
             grid-area: 1 / 1 / 2 / 3
@@ -65,3 +69,11 @@
             grid-area: 2 / 1 / 3 / 2
         &>.column:nth-child(3)
             grid-area: 2 / 2 / 3 / 3
+
+    .mobile-1de2-1de2-1
+        &>.column:nth-child(1)
+            grid-area: 1 / 1 / 2 / 2
+        &>.column:nth-child(2)
+            grid-area: 1 / 2 / 2 / 3
+        &>.column:nth-child(3)
+            grid-area: 2 / 1 / 3 / 3
